<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:id="@+id/title_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_title"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/subtitle_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subtitle"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/placeholder1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:id="@+id/page_border1"
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="@color/box" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/body_box"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/placeholder2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_field_heading"
            android:textColor="@color/white" />

        <LinearLayout
            android:id="@+id/name_input_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/name_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/box"
                android:ems="10"
                android:hint="@string/name_field_hint1"
                android:inputType="textPersonName"
                android:textColorHint="#A9A9A9" />

            <EditText
                android:id="@+id/last_name_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/box"
                android:ems="10"
                android:hint="@string/name_field_hint2"
                android:inputType="textPersonName"
                android:textColorHint="#A9A9A9" />

        </LinearLayout>

        <TextView
            android:id="@+id/placeholder3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/student_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/student_id_field_heading"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/student_id_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/box"
            android:ems="10"
            android:hint="@string/studentid_field_hint"
            android:inputType="textPersonName"
            android:textColorHint="#A9A9A9" />

        <TextView
            android:id="@+id/placeholder4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/gender_option_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/gender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gender_field_heading"
                android:textColor="@color/white" />

            <RadioGroup
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_field_male"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_field_female"
                    android:textColor="@color/white" />
            </RadioGroup>
        </LinearLayout>

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/school_field_heading"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/school_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/box"
            android:ems="10"
            android:hint="@string/school_field_hint"
            android:inputType="textPersonName"
            android:textColorHint="#A9A9A9" />

        <TextView
            android:id="@+id/placeholder5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mail_field_heading"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/box"
            android:ems="10"
            android:hint="@string/mail_field_hint"
            android:inputType="textEmailAddress"
            android:textColorHint="#A9A9A9" />

        <TextView
            android:id="@+id/placeholder6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number_field_heading"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/phone_number_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/box"
            android:ems="10"
            android:hint="@string/phone_number_field_hint"
            android:inputType="phone"
            android:textColorHint="#A9A9A9" />

        <TextView
            android:id="@+id/placeholder7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_button_text"
            android:backgroundTint="@color/box"/>


    </LinearLayout>

</LinearLayout>
